--- a/PracticalMachineLearningProject.Rmd
+++ b/PracticalMachineLearningProject.Rmd
@@ -143,7 +143,7 @@ modelRF
 Now, we estimate the performance of the model on the <b>validation</b> data set.  
 ```{r warning=FALSE, error=FALSE}
 predictRF <- predict(modelRF, validation)
-confusionMatrix(validation$classe, predictRF)
+confusionMatrix(table(validation$classe, predictRF))
 accuracy <- postResample(predictRF, validation$classe)
 ose <- 1 - as.numeric(confusionMatrix(validation$classe, predictRF)$overall[1])
 rm(predictRF)
@@ -152,13 +152,7 @@ rm(predictRF)
 The Estimated Accuracy of the Random Forest Model is `r accuracy[1]*100`% and the Estimated Out-of-Sample Error is `r ose*100`%.  
 Random Forests yielded better Results, as expected!  
 
-## Predicting The Manner of Exercise for Test Data Set  
-Now, we apply the <b>Random Forest</b> model to the original testing data set downloaded from the data source. We remove the problem_id column first.  
-```{r warning=FALSE, error=FALSE}
-rm(accuracy)
-rm(ose)
-predict(modelRF, testing[, -length(names(testing))])
-```  
+
 
 ## Generating Files to submit as answers for the Assignment  
 Function to generate files with predictions to submit for assignment.  
